todo-app/java/quarkus-api/src/main/deployments/ocp.jvm/02.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: quarkusjvm-todo
    version: v1
  name: quarkus-jvm-todo-dc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkusjvm-todo
      version: v1
  strategy: {}
  template:
    metadata:
      labels:
        app: quarkusjvm-todo
        version: v1
    spec:
      containers:
      - image: quay.io/naveenkendyala/quarkus-demo-quarkusjvm-todo:v1
        name: quarkusjvm-todo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "175Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
              port: 8080
              path: /health/live
          initialDelaySeconds: 12
          periodSeconds: 10
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
status: {}
