todo-app/java/quarkus-api/src/main/deployments/ocp.jvm/03.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: quarkus-jvm-todo-svc
  name: quarkus-jvm-todo-svc
spec:
  ports:
  - port: 8080
    #nodePort: 30202
    protocol: TCP
    targetPort: 8080
  selector:
    app: quarkusjvm-todo
    version: v2.13.7
  type: ClusterIP
status:
  loadBalancer: {}
