todo-app/java/quarkus-api/src/main/deployments/ocp.jvm/04.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    name: quarkus-jvm-todo-route
  name: quarkus-jvm-todo-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: quarkus-jvm-todo-svc
    weight: 100
  wildcardPolicy: None
